# toy-blockchain-cli

./: Cargo.toml  README.md
src/: blockchain.rs  main.rs
