[package]
name = "toy-blockchain-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
sha2 = "0.10.8"
